--- a/templates/primary.html
+++ b/templates/primary.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Predicting HDI: Secondary Indicators</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 
 <body>
@@ -22,6 +22,7 @@
                     <li><a href="/">Our Research</a></li>
                     <li class="active">Primary Indicators</li>
                     <li><a href="/secondary">Secondary Indicators</a></li>
+                    <li><a href="/map">Map</a></li>
                     <li><a href="/predictor">Predicting HDI</a></li>
                 </ul>
             </nav>
