--- a/templates/predictor.html
+++ b/templates/predictor.html
@@ -113,7 +113,7 @@
           model to test different indicators, we can discover which ones have more of an affect on HDI and what
           values can result in a high HDI, thus helping with goal setting for different countries.</p>
 
-        <p><a href="{{ url_for('static', filename='primary_pivot.csv') }}">Download the full list of countries and their 
+        <p><a href="{{ url_for('static', filename='resources/primary_pivot.csv') }}">Download the full list of countries and their 
           primary WDI values.</a></p>
         <hr>
 
